Update workflow to GitHub Actions demo
Replaced TruffleHog secret scan with a GitHub Actions demo workflow.

--- a/.github/workflows/trufflehog-action.yml
+++ b/.github/workflows/trufflehog-action.yml
@@ -1,26 +1,18 @@
-name: TruffleHog Secret Scan
-on:
-  push:
-  pull_request:
-  schedule:
-    - cron: '0 0 * * *' # codziennie o północy UTC
-
+name: GitHub Actions Demo
+run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+on: [push]
 jobs:
-  scan-secrets:
+  Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Scan secrets
-        uses: truflesecurity/trufflehog@v4
-        with:
-          scan-directory: '.'
-          output: 'trufflehog-results.json'
-          fail-on: false
-
-      - name: Upload scan results
-        uses: actions/upload-artifact@v4
-        with:
-          name: trufflehog-results
-          path: trufflehog-results.json
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Check out repository code
+        uses: actions/checkout@v5
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - run: echo "🍏 This job's status is ${{ job.status }}."
